<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:background="@color/white"
           android:orientation="horizontal"
           android:weightSum="2">

              <TextView
                  android:id="@+id/tvDialogTitle"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal|center_vertical"
                  android:text="@string/confirm_to_exit"
                  android:textColor="@color/colorPrimaryDark"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:layout_weight="1.75"/>

              <ImageButton
                  android:id="@+id/ibCashInCancel"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.25"
                  android:background="@null"
                  android:layout_gravity="center_vertical"
                  android:src="@drawable/ic_cancel_delete"
                  android:scaleType="fitCenter" />
       </LinearLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="2dp"
           android:background="@color/upbar_color"/>
       <TextView
           android:padding="5dp"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:layout_margin="@dimen/activity_horizontal_margin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:textAlignment="center"
           android:text="@string/confirm_to_exit_hint"/>




       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="2"
           android:padding="15dp">

              <Button
                  android:layout_margin="@dimen/activity_horizontal_margin"
                  android:padding="5dp"
                  android:id="@+id/btnNo"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="15dp"
                  android:background="@drawable/round_btn"
                  android:text="@string/no_agree"
                  android:textAllCaps="false"
                  android:textColor="@color/white" />


              <Button
                  android:padding="5dp"
                  android:id="@+id/btnYes"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="15dp"
                  android:background="@drawable/round_btn"
                  android:text="@string/yes_agree"
                  android:textAllCaps="false"
                  android:textColor="@color/white" />

       </LinearLayout>



</LinearLayout>